refactor: ajusta formatacao e organizacao do codigo